Auto install dependencies on windows